rest-api-school-management/manifests/envoy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
  addresses:
    - type: IPAddress
      value: 172.18.0.4

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mariadb-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  listeners:
    - name: tcp-mariadb
      protocol: TCP
      port: 3306
      allowedRoutes:
        namespaces:
          from: All
  addresses:
    - type: IPAddress
      value: 172.18.0.3
