rest-api-school-management/manifests/cloudbeaver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudbeaver
  labels:
    app: cloudbeaver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudbeaver
  template:
    metadata:
      labels:
        app: cloudbeaver
    spec:
      containers:
        - name: cloudbeaver
          # The official CloudBeaver Docker image from Docker Hub
          image: dbeaver/cloudbeaver:latest
          ports:
            - containerPort: 8978
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "2048Mi"
              cpu: "500m"
          # Optional: Add environment variables for configuration
          # For a full list of variables, refer to the CloudBeaver documentation
          volumeMounts:
            - name: cloudbeaver-data
              mountPath: /opt/cloudbeaver/workspace
      volumes:
        - name: cloudbeaver-data
          persistentVolumeClaim:
            claimName: cloudbeaver-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: cloudbeaver-service
spec:
  selector:
    app: cloudbeaver
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8978

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-httproute
spec:
  hostnames:
    - "cloudbeaver.172.18.0.4.nip.io" ##change this to the appropriate IP
  parentRefs:
    - name: default-gateway
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cloudbeaver-service
          port: 80
          weight: 1
